force-app/main/default/objects/Charisma__c/Charisma__c.object-meta.xml
<CustomObject>
    <label>Charisma</label>
    <nameField>
        <label>Charisma Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Charisma</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>