force-app/main/default/objects/Charisma__c/fields/Deception__c.field-meta.xml
<CustomField>
    <fullName>Deception__c</fullName>
    <label>Deception</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>