force-app/main/default/objects/Charisma__c/fields/Intimidation__c.field-meta.xml
<CustomField>
    <fullName>Intimidation__c</fullName>
    <label>Intimidation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>