force-app/main/default/objects/Charisma__c/fields/Persuasion__c.field-meta.xml
<CustomField>
    <fullName>Persuasion__c</fullName>
    <label>Persuasion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>