force-app/main/default/objects/Charisma__c/fields/Stat__c.field-meta.xml
<CustomField>
    <fullName>Stat__c</fullName>
    <formula>Deception__c +  Intimidation__c +  Performance__c +  Persuasion__c +  Saving_Throws__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>